add images to the project

--- a/index.html
+++ b/index.html
@@ -9,6 +9,30 @@
   <title>Programming_Language_Suggester</title>
 </head>
 <body>
+  <div class="jumbotron jumbotron-fluid">
+    <div class="container">
+      <h1 class="display-4">Programming-language-suggester</h1>
+      <p class="lead">What would be the best first language for you to learn?</p>
+    </div>
+  </div>
+  <div class="Survery">
+    <H3>Who is your favorite Avenger?</H3>
+    <img src="images/avengers.jpeg" alt="Picture of avengers">
+  </div>
+  <div class="Question1">
+      <input type="radio" id="Hulk" name="Avenger" value="Hulk">
+      <label for="hulk">hulk</label><br>
+      <input type="radio" id="Iron-Man" name="Avenger" value="Iron-Man">
+      <label for="Iron-Man">Iron-Man</label><br>
+      <input type="radio" id="Captain-America" name="Avenger" value="Captain-America">
+      <label for="Captain-America">Captain-America</label><br>
+      <input type="radio" id="Black-Panther" name="Avenger" value="Black-Panther">
+      <label for="Black-Panther">Black-Panther</label><br>
+      <input type="radio" id="Black-Widow" name="Avenger" value="Black-Widow">
+      <label for="Black-Widow">Black-Widow</label><br>
+  </div>
+  
+
   
 </body>
 </html>
