--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
   <link href="css/styles.css" rel="stylesheet" type="text/css">
   <script src="js/jquery-3.6.0.js"></script>
   <script src="js/scripts.js"></script>
-  
+
   <title>Programming_Language_Suggester</title>
 </head>
+
 <body>
   <div class="jumbotron jumbotron-fluid">
     <div class="container">
@@ -17,22 +19,39 @@
   </div>
   <div class="Survery">
     <H3>Who is your favorite Avenger?</H3>
-    <img src="images/avengers.jpeg" alt="Picture of avengers">
+    <img src="images/avengers.jpeg" alt="Picture of avengers" width="1000">
   </div>
   <div class="Question1">
-      <input type="radio" id="Hulk" name="Avenger" value="Hulk">
-      <label for="hulk">hulk</label><br>
-      <input type="radio" id="Iron-Man" name="Avenger" value="Iron-Man">
-      <label for="Iron-Man">Iron-Man</label><br>
-      <input type="radio" id="Captain-America" name="Avenger" value="Captain-America">
-      <label for="Captain-America">Captain-America</label><br>
-      <input type="radio" id="Black-Panther" name="Avenger" value="Black-Panther">
-      <label for="Black-Panther">Black-Panther</label><br>
-      <input type="radio" id="Black-Widow" name="Avenger" value="Black-Widow">
-      <label for="Black-Widow">Black-Widow</label><br>
+    <input type="radio" id="Hulk" name="Avenger" value="Hulk">
+    <label for="hulk">hulk</label><br>
+    <input type="radio" id="Iron-Man" name="Avenger" value="Iron-Man">
+    <label for="Iron-Man">Iron-Man</label><br>
+    <input type="radio" id="Captain-America" name="Avenger" value="Captain-America">
+    <label for="Captain-America">Captain-America</label><br>
+    <input type="radio" id="Black-Panther" name="Avenger" value="Black-Panther">
+    <label for="Black-Panther">Black-Panther</label><br>
+    <input type="radio" id="Black-Widow" name="Avenger" value="Black-Widow">
+    <label for="Black-Widow">Black-Widow</label><br>
   </div>
-  
+  <div class="Question2">
+    <H3>Who's your favorite DC hero?</H3>
+    <img src="images/DC.jpeg" alt="Picture the Justice League" width="1000">
+  </div>
 
-  
+    <input type="radio" id="Super-Man" name="Justice-League" value="Super-Man">
+    <label for="Super-Man">Super-Man</label><br>
+    <input type="radio" id="Wonder-Woman" name="Justice-League" value="Wonder-Woman">
+    <label for="Wonder-Woman">Wonder-Woman</label><br>
+    <input type="radio" id="The-Flash" name="Justice-League" value="The-Flash">
+    <label for="The-Flash">The-Flash</label><br>
+    <input type="radio" id="Bat-Man" name="Justice-League" value="Bat-Man">
+    <label for="Bat-Man">Bat-Man</label><br>
+    <input type="radio" id="Green-Lantern" name="Justice-League" value="Green-Lantern">
+    <label for="Green-Lantern">Green-Lantern</label><br>
+  </div>
+
+
+
 </body>
+
 </html>
