add images to project and buttons to html

--- a/index.html
+++ b/index.html
@@ -49,6 +49,22 @@
     <input type="radio" id="Green-Lantern" name="Justice-League" value="Green-Lantern">
     <label for="Green-Lantern">Green-Lantern</label><br>
   </div>
+  
+  <div class="Question3">
+    <H3>Who's your favorite X-Men?</H3>
+    <img src="images/x-men.png" alt="Picture of X-Men">
+  </div>
+  <input type="radio" id="Storm" name="X-Men" value="Storm">
+  <label for="Storm">Storm</label><br>
+  <input type="radio" id="Rogue" name="Color" value="Blue">
+  <label for="Blue">Blue</label><br>
+  <input type="radio" id="Green" name="Color" value="Green">
+  <label for="Green">Green</label><br>
+  <input type="radio" id="Purple" name="Color" value="Purple">
+  <label for="Purple">Purple</label><br>
+  <input type="radio" id="Pink" name="Color" value="Pink">
+  <label for="Pink">Pink</label><br>
+  </div>
 
 
 
