add radio buttons to question #3

--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
   </div>
   <input type="radio" id="Storm" name="X-Men" value="Storm">
   <label for="Storm">Storm</label><br>
-  <input type="radio" id="Rogue" name="Color" value="Blue">
-  <label for="Blue">Blue</label><br>
-  <input type="radio" id="Green" name="Color" value="Green">
-  <label for="Green">Green</label><br>
-  <input type="radio" id="Purple" name="Color" value="Purple">
-  <label for="Purple">Purple</label><br>
-  <input type="radio" id="Pink" name="Color" value="Pink">
-  <label for="Pink">Pink</label><br>
+  <input type="radio" id="Rogue" name="X-Men" value="Rogue">
+  <label for="Rogue">Rogue</label><br>
+  <input type="radio" id="Cyclops" name="X-Men" value="Cyclops">
+  <label for="Cyclops">Cyclops</label><br>
+  <input type="radio" id="Wolverine" name="X-Men" value="Wolverine">
+  <label for="Wolverine">Wolverine</label><br>
+  <input type="radio" id="Phoneix" name="X-Men" value="Phoneix">
+  <label for="Phoneix">Phoneix</label><br>
   </div>
 
 
