add if else to js and id's to css

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </div>
   <div class="Question1">
     <input type="radio" id="Hulk" name="Avenger" value="Hulk">
-    <label for="hulk">hulk</label><br>
+    <label for="Hulk">hulk</label><br>
     <input type="radio" id="Iron-Man" name="Avenger" value="Iron-Man">
     <label for="Iron-Man">Iron-Man</label><br>
     <input type="radio" id="Captain-America" name="Avenger" value="Captain-America">
@@ -34,7 +34,7 @@
     <label for="Black-Widow">Black-Widow</label><br>
   </div>
   <div class="Question2">
-    <H3>Who's your favorite DC hero?</H3>
+    <H3>Who's your favorite Justice-League superhero?</H3>
     <img src="images/DC.jpeg" alt="Picture the Justice League" width="1000">
   </div>
 
@@ -99,6 +99,10 @@
   </div>
 
   <Button onclick="submitButton()"> Submit!</Button>
+</div>
+<div id ="JavaScript">
+  <h2>JavaScript</h2>
+  <p>JavaScript would be an excellent first language for you.</p>
 </div>
 
 
