add id's to html

--- a/index.html
+++ b/index.html
@@ -98,13 +98,23 @@
     <label for="Piccolo">Piccolo</label><br>
   </div>
 
-  <Button onclick="submitButton()"> Submit!</Button>
+  <Button type="button" onclick="submitButton()"> Submit!</Button>
 </div>
 <div id ="JavaScript">
-  <h2>JavaScript</h2>
   <p>JavaScript would be an excellent first language for you.</p>
 </div>
-
+<div id ="ruby">
+  <p>Based on your seletion Ruby would be a great frist language for you to learn.</p>
+</div>
+<div id="python">
+<p>Based on your seletion python would be a great frist language for you to learn.</p>
+</div>
+<div id="Go">
+  <p>Based on your seletion Ruby would be a great frist language for you to learn.</p>
+</div>
+<div id="Csharp">
+  <p>Based on your seletion Ruby would be a great frist language for you to learn.</p>
+</div>
 
 
 
