--- a/index.html
+++ b/index.html
@@ -104,16 +104,16 @@
   <p>JavaScript would be an excellent first language for you.</p>
 </div>
 <div id ="ruby">
-  <p>Based on your seletion Ruby would be a great frist language for you to learn.</p>
+  <p>Based on your selection Ruby would be a great frist language for you to learn.</p>
 </div>
 <div id="python">
-<p>Based on your seletion python would be a great frist language for you to learn.</p>
+  <p>Based on your selection python would be a great frist language for you to learn.</p>
 </div>
 <div id="Go">
-  <p>Based on your seletion Ruby would be a great frist language for you to learn.</p>
+  <p>Based on your selection Ruby would be a great frist language for you to learn.</p>
 </div>
-<div id="Csharp">
-  <p>Based on your seletion Ruby would be a great frist language for you to learn.</p>
+<div id="#Csharp">
+  <p>Based on your selection Ruby would be a great frist language for you to learn.</p>
 </div>
 
 
