--- a/index.html
+++ b/index.html
@@ -99,12 +99,12 @@
   </div>
 
   <Button type="button" onclick="submitButton()"> Submit!</Button>
-</div>
+
 <div id ="JavaScript">
   <p>JavaScript would be an excellent first language for you.</p>
 </div>
-<div id ="ruby">
-  <p>Based on your selection Ruby would be a great frist language for you to learn.</p>
+<div id="ruby">
+  <p>Based on your Ruby would be a good first choice language for you to learn </p>
 </div>
 <div id="python">
   <p>Based on your selection python would be a great frist language for you to learn.</p>
@@ -115,6 +115,7 @@
 <div id="#Csharp">
   <p>Based on your selection Ruby would be a great frist language for you to learn.</p>
 </div>
+
 
 
 
