update html and js

--- a/index.html
+++ b/index.html
@@ -17,20 +17,21 @@
       <p class="lead">What would be the best first language for you to learn?</p>
     </div>
   </div>
+  <form id="list">
   <div class="Survery">
     <H3>Who is your favorite Avenger?</H3>
     <img src="images/avengers.jpeg" alt="Picture of avengers" width="1000">
   </div>
   <div class="Question1">
-    <input type="radio" id="Hulk" name="Avenger" value="Hulk">
+    <input type="radio" id="Hulk" name="Avenger" value="1">
     <label for="Hulk">hulk</label><br>
-    <input type="radio" id="Iron-Man" name="Avenger" value="Iron-Man">
+    <input type="radio" id="Iron-Man" name="Avenger" value="2">
     <label for="Iron-Man">Iron-Man</label><br>
-    <input type="radio" id="Captain-America" name="Avenger" value="Captain-America">
+    <input type="radio" id="Captain-America" name="Avenger" value="3">
     <label for="Captain-America">Captain-America</label><br>
-    <input type="radio" id="Black-Panther" name="Avenger" value="Black-Panther">
+    <input type="radio" id="Black-Panther" name="Avenger" value="4">
     <label for="Black-Panther">Black-Panther</label><br>
-    <input type="radio" id="Black-Widow" name="Avenger" value="Black-Widow">
+    <input type="radio" id="Black-Widow" name="Avenger" value="5">
     <label for="Black-Widow">Black-Widow</label><br>
   </div>
   <div class="Question2">
@@ -38,15 +39,15 @@
     <img src="images/DC.jpeg" alt="Picture the Justice League" width="1000">
   </div>
 
-    <input type="radio" id="Super-Man" name="Justice-League" value="Super-Man">
+    <input type="radio" id="Super-Man" name="Justice-League" value="1">
     <label for="Super-Man">Super-Man</label><br>
-    <input type="radio" id="Wonder-Woman" name="Justice-League" value="Wonder-Woman">
+    <input type="radio" id="Wonder-Woman" name="Justice-League" value="2">
     <label for="Wonder-Woman">Wonder-Woman</label><br>
-    <input type="radio" id="The-Flash" name="Justice-League" value="The-Flash">
+    <input type="radio" id="The-Flash" name="Justice-League" value="3">
     <label for="The-Flash">The-Flash</label><br>
-    <input type="radio" id="Bat-Man" name="Justice-League" value="Bat-Man">
+    <input type="radio" id="Bat-Man" name="Justice-League" value="4">
     <label for="Bat-Man">Bat-Man</label><br>
-    <input type="radio" id="Green-Lantern" name="Justice-League" value="Green-Lantern">
+    <input type="radio" id="Green-Lantern" name="Justice-League" value="5">
     <label for="Green-Lantern">Green-Lantern</label><br>
   </div>
   
@@ -54,15 +55,15 @@
     <H3>Who's your favorite X-Men?</H3>
     <img src="images/x-men.png" alt="Picture of X-Men">
   </div>
-  <input type="radio" id="Storm" name="X-Men" value="Storm">
+  <input type="radio" id="Storm" name="X-Men" value="1">
   <label for="Storm">Storm</label><br>
-  <input type="radio" id="Rogue" name="X-Men" value="Rogue">
+  <input type="radio" id="Rogue" name="X-Men" value="2">
   <label for="Rogue">Rogue</label><br>
-  <input type="radio" id="Cyclops" name="X-Men" value="Cyclops">
+  <input type="radio" id="Cyclops" name="X-Men" value="3">
   <label for="Cyclops">Cyclops</label><br>
-  <input type="radio" id="Wolverine" name="X-Men" value="Wolverine">
+  <input type="radio" id="Wolverine" name="X-Men" value="4">
   <label for="Wolverine">Wolverine</label><br>
-  <input type="radio" id="Phoneix" name="X-Men" value="Phoneix">
+  <input type="radio" id="Phoneix" name="X-Men" value="5">
   <label for="Phoneix">Phoneix</label><br>
   </div>
 
@@ -70,15 +71,15 @@
     <H3>Who's your favorite Super-Villiain?</H3>
     <img src="images/Super-Villiains.jpeg" alt="photo of Super-Villiains">
   </div>
-    <input type="radio" id="King-pin" name="Super-Villiains" value="King-pin">
+    <input type="radio" id="King-pin" name="Super-Villiains" value="1">
     <label for="King-pin">King-pin</label><br>
-    <input type="radio" id="Venom" name="Super-Villiains" value="Venom">
+    <input type="radio" id="Venom" name="Super-Villiains" value="2">
     <label for="Venom">Venom</label><br>
-    <input type="radio" id="Red-Skull" name="Super-Villiains" value="Red-Skull">
+    <input type="radio" id="Red-Skull" name="Super-Villiains" value="3">
     <label for="Red-Skull">Red-Skull</label><br>
-    <input type="radio" id="Bane" name="Super-Villiains" value="Bane">
+    <input type="radio" id="Bane" name="Super-Villiains" value="4">
     <label for="Bane">Bane</label><br>
-    <input type="radio" id="Dooms-Day" name="Super-Villiains" value="Dooms-Day">
+    <input type="radio" id="Dooms-Day" name="Super-Villiains" value="5">
     <label for="Dooms-Day">Dooms-Day</label><br>
   </div>
 
@@ -86,25 +87,25 @@
     <H3> What's Your Favorite Dragon Ball Charater?</H3>
     <img src="images/Dragonball.jpeg" alt="Dragonball Charaters">
   </div>
-    <input type="radio" id="Goku" name="Dragonball" value="Goku">
+    <input type="radio" id="Goku" name="Dragonball" value="1">
     <label for="Goku">Goku</label><br>
-    <input type="radio" id="Vegeta" name="Dragonball" value="Vegeta">
+    <input type="radio" id="Vegeta" name="Dragonball" value="2">
     <label for="Vegeta">Vegeta</label><br>
-    <input type="radio" id="Frieza" name="Dragonball" value="Frieza">
+    <input type="radio" id="Frieza" name="Dragonball" value="3">
     <label for="Frieza">Frieza</label><br>
-    <input type="radio" id="Gohan" name="Dragonball" value="Gohan">
+    <input type="radio" id="Gohan" name="Dragonball" value="4">
     <label for="Gohan">Gohan</label><br>
-    <input type="radio" id="Piccolo" name="Dragonball" value="Piccolo">
+    <input type="radio" id="Piccolo" name="Dragonball" value="5">
     <label for="Piccolo">Piccolo</label><br>
   </div>
 
-  <Button type="button" onclick="submitButton()"> Submit!</Button>
-
+  <button id="button"type="submit"> Submit!</button>
+</form>
 <div id ="JavaScript">
   <p>JavaScript would be an excellent first language for you.</p>
 </div>
 <div id="ruby">
-  <p>Based on your Ruby would be a good first choice language for you to learn </p>
+  <p>Based on your selection Ruby would be a good first choice language for you to learn</p>
 </div>
 <div id="python">
   <p>Based on your selection python would be a great frist language for you to learn.</p>
