update js and html so that webpage displays answers

--- a/index.html
+++ b/index.html
@@ -101,20 +101,20 @@
 
   <button id="button"type="submit"> Submit!</button>
 </form>
-<div id ="JavaScript">
+<div id="javaScript">
   <p>JavaScript would be an excellent first language for you.</p>
 </div>
 <div id="ruby">
-  <p>Based on your selection Ruby would be a good first choice language for you to learn</p>
+  <p>Based on your selection ruby would be a good first choice language for you to learn</p>
 </div>
 <div id="python">
   <p>Based on your selection python would be a great frist language for you to learn.</p>
 </div>
-<div id="Go">
-  <p>Based on your selection Ruby would be a great frist language for you to learn.</p>
+<div id="go">
+  <p>Based on your selection go would be a great frist language for you to learn.</p>
 </div>
-<div id="#Csharp">
-  <p>Based on your selection Ruby would be a great frist language for you to learn.</p>
+<div id="csharp">
+  <p>Based on your selection csharp would be a great frist language for you to learn.</p>
 </div>
 
 
